# sin_validator

./: .flake8  .gitignore  Makefile  README.md  main.py  pyproject.toml
tests/: test_main.py
