[tool.poetry]
name = "sin-validator"
version = "0.1.0"
description = ""
authors = ["Lucas Rocha <8rocha.lucas@gmail.com>"]
readme = "README.md"
packages = [{include = "sin_validator"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = "."

[tool.black]
line-length = 120

[tool.isort]
atomic = true
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
